fix: contrast of few form inputs

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1424,8 +1424,6 @@ div[class*=" #{$class-slug}"] {
 
 body:not(.admin) {
   .form-control {
-    background-color: transparent;
-
     &:focus,
     &:active {
       background-color: white !important;
